<resources>
    <string name="app_name">My Shoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_hint">Enter your email address</string>
    <string name="password">Password</string>
    <string name="blank">This Field should not be empty.</string>
    <string name="email_error">This email pattern is not correct, please enter correct email.</string>
    <string name="password_length">Password length should be more than 8 chars</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="shoe_company">Shoe Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="shoe_description">Shoe Description:</string>
    <string name="dummy_text">UwU</string>
    <string name="enter_shoe_name">Enter shoe Name</string>
    <string name="enter_shoe_company">Enter shoe Company</string>
    <string name="enter_shoe_size">Enter shoe Size</string>
    <string name="enter_shoe_description">Enter shoe Description</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="instructions">Use \"+ Button\" to Add New Shoes To Your Inventory</string>
    <string name="shoes_inventory">Your Shoes Inventory</string>
    <string name="add_shoes">Add Shoes</string>
    <string name="welcome">Welcome To Your Shoes Inventory</string>
    <string name="logout">Logout</string>
</resources>